2013-04-09  Roland Levillain  <roland@lrde.epita.fr>

	Help SWIG 2.0.9 wrap a ctor added as an extension.

	* box2d.i: Here.
	Drop the namespace qualifier before the class name (see
	http://sourceforge.net/p/swig/bugs/1291/).

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Aesthetic changes in Swilena.

	* swilena/box.ixx,
	* swilena/box2d.i,
	* swilena/image2d.ixx,
	* swilena/image2d_point2d.i,
	* swilena/morpho.ixx:
	Here.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Add sps-gdb-local, a script to run the Swilena Python Shell in GDB.

	* python/sps-gdb-local.in: New.
	* python/Makefile.am (edit): Also substitute @LIBTOOL@.
	(noinst_SCRIPTS): Add sps-gdb-local.
	(EXTRA_DIST): Add sps-gdb-local.in.
	(sps-gdb-local): Add a dependency on $(srcdir)/sps-gdb-local.in.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Fix build dependencies in Swilena.

	* python/Makefile.am (image2d_point2d-wrap.cc): Depend on
	$(top_srcdir)/swilena/concat.ixx.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Comment on an issue of Swilena highlighted by max-tree.py.

	* python/max-tree.py: Here.

2012-08-28  Roland Levillain  <roland@lrde.epita.fr>

	Update the local (build-time) Swilena Python Shell.

	* python/sps-local.in (PYTHONPATH): Add `@abs_builddir@/.libs'.

2012-07-27  Roland Levillain  <roland@lrde.epita.fr>

	Get rid of `ltihooks' in Swilena.

	* python/ltihooks.py: Remove.
	* python/Makefile.am (python_PYTHON): Remove ltihooks.py.
	* python/swilena.py: No longer import `ltihooks'.
	* run.in: Help Python find actual dynamic modules in directory
	`.libs', as suggested by Alexandre Duret-Lutz in
	http://stackoverflow.com/a/5125879/1551751.

2010-12-03  Roland Levillain  <roland@lrde.epita.fr>

	Perform install tests in Swilena.

	* python/installcheck.mk: New.
	Include it...
	* python/Makefile.am: ...here.
	(run_install_test_verbose, run_install_test_verbose_)
	(run_install_test_verbose_0)
	(INSTALL_TESTS_ENVIRONMENT, INSTALL_TESTS):